--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "webpack advance",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./config/webpack.config.dev.js",
-    "build": "webpack --config ./config/webpack.config.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/xieww/webpack-advance"
   },
   "keywords": [
     "webpack"
@@ -32,13 +32,17 @@
     "html-webpack-plugin": "^4.4.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.3"
+    "webpack-merge": "^5.1.3",
+    "webpackbar": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
