--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.prod.js",
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "build:dll": "webpack --config ./config/webpack.config.dll.js",
+    "analyze": "cross-env ANALYZE=1 npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +30,8 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
     "file-loader": "^6.1.0",
+    "happypack": "^5.0.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "less": "^3.12.2",
@@ -39,6 +43,7 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.3",
@@ -46,6 +51,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@babel/runtime-corejs3": "^7.11.2"
+    "@babel/runtime-corejs3": "^7.11.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
